[package]
name = "rlox-ast"
version = "0.1.0"
authors = ["Emirhan TALA <tala.emirhan@gmail.com>"]
edition = "2021"
description = "Rust implementation of the jlox interpreter from the second chapter of 'Crafting Interpreters'."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Emivvvvv/rlox"

[dependencies]
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
rustc-hash = "2.0.0"
string-interner = "0.17.0"