[package]
name = "rlox-bytecode"
version = "0.1.0"
authors = ["Emirhan TALA <tala.emirhan@gmail.com>"]
edition = "2021"
description = "Rust implementation of the clox interpreter from the third chapter of 'Crafting Interpreters'."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Emivvvvv/rlox/"

[dependencies]